name:                nydus
version:             0.0.0.0
synopsis:            A tool for managing SSH tunnels.
-- description:
license:             MIT
license-file:        LICENSE
author:              Alex Smith
maintainer:          ags@fastmail.fm
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable nydus
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
      base >=4.8 && <4.9
    , bytestring >=0.10 && < 0.11
    , containers >=0.5 && <0.6
    , optparse-applicative >=0.11 && <0.12
    , yaml >=0.8 && <0.9
